// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button includes #icon via prop positioned via #iconPos divider and children 1`] = `
<button
  className="Button368501032__root Button368501032---iconPos-5-start Button368501032---tone-1-1 Button368501032---variant-7-primary Button368501032---vol-1-3"
  data-testid="button-data-testid"
  onBlur={null}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <svg
    aria-hidden={true}
    className="Icon653087671__root"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <path
      d="M14 7h-5v-5h-2v5h-5v2h5v5h2v-5h5v-2z"
    />
  </svg>
  <span
    className="Button368501032__divider"
  />
  <span
    className="Button368501032__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;

exports[`Button includes #icon, no children, visually hidden label text provided via Icon alt prop 1`] = `
<button
  className="Button368501032__root Button368501032---iconPos-3-end Button368501032---tone-1-1 Button368501032---variant-9-secondary Button368501032---vol-1-3"
  data-testid="button-data-testid"
  onBlur={null}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <svg
    aria-hidden={true}
    className="Icon653087671__root"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <path
      d="M14 7h-5v-5h-2v5h-5v2h5v5h2v-5h5v-2z"
    />
  </svg>
  <span
    className="visuallyHidden224360861__root"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;

exports[`Button renders as a basic anchor link via #href prop 1`] = `
<a
  className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-7-primary Button368501032---vol-1-3"
  data-testid="button-data-testid"
  href="http://shelley.earth"
  onBlur={null}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="Button368501032__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</a>
`;

exports[`Button renders as a basic button with custom #className 1`] = `
<button
  className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-7-primary Button368501032---vol-1-3 for-which-nobody-can-deny"
  data-testid="button-data-testid"
  onBlur={null}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="Button368501032__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;

exports[`Button renders as third party (react-router) anchor provided via #as and #to props 1`] = `
<a
  className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-7-primary Button368501032---vol-1-3"
  data-testid="button-data-testid"
  href="/internal-link"
  onBlur={null}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="Button368501032__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</a>
`;

exports[`Button renders with stylable state prop classes, #tone, #variant, #vol and #fullwidth 1`] = `
<button
  className="Button368501032__root Button368501032--fullWidth Button368501032---tone-1-6 Button368501032---variant-7-primary Button368501032---vol-1-6"
  data-testid="button-data-testid"
  onBlur={null}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="Button368501032__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;
